--- a/jetlinks-standalone/pom.xml
+++ b/jetlinks-standalone/pom.xml
@@ -39,6 +39,7 @@
                     <layers>
                         <enabled>true</enabled>
                     </layers>
+                    <outputDirectory>${project.parent.basedir}/target</outputDirectory>
                 </configuration>
                 <executions>
                     <execution>
